--- a/social-media.html
+++ b/social-media.html
@@ -176,7 +176,7 @@
         //if you want the URL to open in the same window use '_parent'  instead of '_blank'
 
         if (id === "blog")
-          window.open("https://vision.peaceevolution.com/your-dream-career/investing-in-yourself-posts", '_blank').focus(); //Add the url to your blog
+          window.open("https://vision.peaceevolution.com/your-dream-career/investing-in-yourself-posts", '_parent').focus(); //Add the url to your blog
 
         else if (id === "email") {
           window.open("mailto:emmanuel@peaceevolution.com", '_blank').focus(); //Add your email after "mailto:""
