--- a/social-media.html
+++ b/social-media.html
@@ -183,7 +183,7 @@
         }
 
         else if (id === "facebook") {
-          window.open("https://www.facebook.com/PeaceEvolutions/", '_blank').focus(); //Add the url to your facebook page or account
+          window.open("https://www.facebook.com/PeaceEvolutions", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
           window.open("https://www.instagram.com/peaceevolutions/", '_blank').focus(); //Add the url to your instagram account
