--- a/social-media.html
+++ b/social-media.html
@@ -129,7 +129,7 @@
 
       <!-- Start twitter Icon -->
       <div id="twitter" onclick="navigate(this.id)" class="social">
-        <span class="icon twitter"><i class="fab-x-twitter fa-x-twitter"></i></span>
+        <span class="icon twitter"><i class="fab-x-twitter temporary-twitter-x"></i></span>
       </div>
       <!-- End twitter Icon -->
 
