--- a/social-media.html
+++ b/social-media.html
@@ -37,11 +37,10 @@
       color: #7a7a7a
     }
 
-<!--
     .blog:hover {
       color: #ffbd2f;
     }
--->
+
     .email:hover {
       color: #23c8c8;
     }
@@ -98,9 +97,11 @@
     <div class="wrapper">
 
       <!-- Start blog Icon -->
+      <!-- Start blog Icon 
       <div id="blog" onclick="navigate(this.id)" class="social">
         <span class="icon blog"><i class="fa-solid fa-blog"></i></span>
       </div>
+           End blog Icon -->
       <!-- End blog Icon -->
 
       <!-- Start email Icon -->
