--- a/social-media.html
+++ b/social-media.html
@@ -105,9 +105,11 @@
       <!-- End blog Icon -->
 
       <!-- Start email Icon -->
+      <!-- Start email Icon
       <div id="email" onclick="navigate(this.id)" class="social">
         <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
       </div>
+           End email Icon -->
       <!-- End email Icon -->
 
       <!-- Start facebook Icon -->
@@ -135,15 +137,19 @@
       <!-- End twitter Icon -->
 
       <!-- Start reddit Icon -->
+      <!-- Start reddit Icon
       <div id="reddit" onclick="navigate(this.id)" class="social">
         <span class="icon reddit"><i class="fab fa-reddit"></i></span>
       </div>
+           End reddit Icon -->
       <!-- End reddit Icon -->
 
       <!-- Start tiktok Icon -->
+      <!-- Start tiktok Icon
       <div id="tiktok" onclick="navigate(this.id)" class="social">
         <span class="icon tiktok"><i class="fab fa-tiktok"></i></span>
       </div>
+           End tiktok Icon -->
       <!-- End tiktok Icon -->
 
       <!-- Start youtube Icon -->
@@ -159,9 +165,11 @@
       <!-- End pinterest Icon -->
 
       <!-- Start telegram Icon -->
+      <!-- Start telegram Icon
       <div id="telegram" onclick="navigate(this.id)" class="social">
         <span class="icon telegram"><i class="fab fa-telegram"></i></span>
       </div>
+           End telegram Icon -->
       <!-- End telegram Icon -->
 
 
