--- a/social-media.html
+++ b/social-media.html
@@ -137,8 +137,8 @@
       <!-- End linkedin Icon -->
 
       <!-- Start twitter Icon -->
-      <div id="fa.twitter" onclick="navigate(this.id)" class="social">
-        <span class="icon twitter"><i class="fa.fa.twitter"></i></span>
+      <div id="twitter" onclick="navigate(this.id)" class="social">
+        <span class="icon twitter"><i class="fab fa-twitter"></i></span>
       </div>
       <!-- End twitter Icon -->
 
