--- a/social-media.html
+++ b/social-media.html
@@ -56,10 +56,10 @@
     .linkedin:hover {
       color: #0e76a8;
     }
-    .fa.fa-twitter{
+    .fa-twitter{
 	    font-family:sans-serif;
     }
-    .fa.fa-twitter::before{
+    .fa-twitter::before{
     	content:"𝕏";
 	    font-size:1.2em;
     }
@@ -146,7 +146,7 @@
 
       <!-- Start twitter Icon -->
       <div id="fa.twitter" onclick="navigate(this.id)" class="social">
-        <span class="icon twitter"><i class="fa.fa-twitter"></i></span>
+        <span class="icon twitter"></i></span>
       </div>
       <!-- End twitter Icon -->
 
