--- a/social-media.html
+++ b/social-media.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- Credit - Auther: Shorouk Abdelaziz  https://shorouk.dev -->
+<!-- Credit - Author: Shorouk Abdelaziz  https://shorouk.dev -->
 
 <html lang="en">
 
