--- a/facebook.html
+++ b/facebook.html
@@ -4,7 +4,7 @@
 
 <h1>The a href attribute</h1>
 
-<p>An absolute URL: <a href="https://www.facebook.com/PeaceEvolutions" target="_blank">Facebook</a></p>
+<p>An absolute URL: <a href="https://www.facebook.com/PeaceEvolutions" target="_blank" rel="noopener noreferrer">Facebook</a></p>
 <p>A relative URL: <a href="tag_a.asp">The a tag</a></p>
 
 </body>
