--- a/social-media.html
+++ b/social-media.html
@@ -103,11 +103,11 @@
     <div class="wrapper">
 
       <!-- Start blog Icon -->
-      <!-- Start blog Icon -->
+      <!-- Start blog Icon 
       <div id="blog" onclick="navigate(this.id)" class="social">
         <span class="icon blog"><i class="fa-solid fa-blog"></i></span>
       </div>
-      <!--     End blog Icon -->
+           End blog Icon -->
       <!-- End blog Icon -->
 
       <!-- Start email Icon -->
